; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_nodemgr.c_hpsb_node_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_nodemgr.c_hpsb_node_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.node_entry = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hpsb_node_write(%struct.node_entry* %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct.node_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.node_entry* %0, %struct.node_entry** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load %struct.node_entry*, %struct.node_entry** %5, align 8
  %11 = getelementptr inbounds %struct.node_entry, %struct.node_entry* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %9, align 4
  %13 = call i32 (...) @smp_rmb()
  %14 = load %struct.node_entry*, %struct.node_entry** %5, align 8
  %15 = getelementptr inbounds %struct.node_entry, %struct.node_entry* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.node_entry*, %struct.node_entry** %5, align 8
  %18 = getelementptr inbounds %struct.node_entry, %struct.node_entry* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = call i32 @hpsb_write(i32 %16, i32 %19, i32 %20, i32 %21, i32* %22, i64 %23)
  ret i32 %24
}

declare dso_local i32 @smp_rmb(...) #1

declare dso_local i32 @hpsb_write(i32, i32, i32, i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
